Multiple containers in IT - Initial commit